modify test-scripts