@@ -1,8 +1,7 @@
 cd /D %~dp0
-
-echo "BenchmarkClient is starting..."
+cd ./../
+echo "BenchClient is starting..."
 echo off
-java -Xms512m -Xmx512m -Xmn128m -XX:+PrintGCDetails -Xloggc:../log/Benchmark-gc.log -Dwrite.statistics=true -Djava.ext.dirs="../conf;../lib"  "com.jd.bdp.hydra.benchmark.startBenchTest.BenchmarkClient" > "../log/Benchmark.log"
-cd ..
-echo "BenchmarkClient start scheckule is ok,you can check the log file in /log"
+java -Xms512m -Xmx512m -Xmn128m -Djava.ext.dirs="conf;lib" -Dbenchmark.properties.file="conf/benchmark.properties" "com.jd.bdp.hydra.benchmark.startBenchTest.BenchmarkClient" > "log/benchmark.log"
+echo "Manager start scheckule is ok,you can check the log file in /log"
 pause
